--- a/website/config.toml
+++ b/website/config.toml
@@ -6,7 +6,7 @@ theme = "mainroad"
 disqusShortname = "" # Enable comments by entering your Disqus shortname
 googleAnalytics = "" # Enable Google Analytics by entering your tracking id
 tags = ["blog", "gopro", "photography"]
-publishDir = "../docs"
+publishDir = "/docs"
 
 [taxonomies]
   category = "categories"
